fixed off center

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -52,7 +52,7 @@
 */
 
 .cardContainer {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100%;
   display: flex;
